# pico-wake-word

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
micro_speech/: CMakeLists.txt  Makefile  command_responder.h  feature_provider.cc  feature_provider.h  main.cc  main_functions.cc  main_functions.h  recognize_commands.h
micro_speech/micro_features/: micro_features_generator.h  micro_model_settings.h  model.h  no_micro_features_data.h  yes_micro_features_data.h
micro_speech/rp2/: audio_provider.cc  command_responder.cc  debug_log.cc  micro_time.cc  mock_audio_provider.cc
micro_speech/simple_features/: simple_model_settings.h
src/: analog_audio_provider.cc  audio_provider.cc  main.cpp  pdm_audio_provider.cc
